updated PROJECT_SUMMARY.md which had drifted a bit